--- a/poker_app/main/templates/main/index.html
+++ b/poker_app/main/templates/main/index.html
@@ -1,41 +1,55 @@
-<p>Poker</p>
+{% extends 'main/base.html' %}
+
+{% block content %}
+
+<div class='title'>
+    <h1>Poker</h1>
+</div>
+
 
 {% if user.is_authenticated %}
 
-    <div>
-        <p>Join a game:</p>
-        <form id="join_form" method='post' action="{% url 'game:join' %}">
-            {% csrf_token %}
-            <input type="text" placeholder="Enter your game's name' here" id="join_game" name="game_name_join">
-            <button type="submit" id="join_submit">Submit</button>
-        </form>
-    </div>
+    <div class='menu'>
 
-    <div>
-        <p>Create a game:</p>
-        <form id="create_form" method='post' action="{% url 'game:create' %}">
-            {% csrf_token %}
-            <input type="text" placeholder="Enter a game name here" id="create_game" name="game_name_create">
-            <button type="submit" id="create_submit">Submit</button>
-        </form>
-    </div>
+        <div >
+            <p>Join a game:</p>
+            <form id="join_form" method='post' action="{% url 'game:join' %}">
+                {% csrf_token %}
+                <input type="text" placeholder="Enter your game's name' here" id="join_game" name="game_name_join">
+                <button type="submit" id="join_submit">Submit</button>
+            </form>
+        </div>
 
-    <div>
-        <a href="{% url 'main:log_out' %}">Log out</a>
+        <div>
+            <p>Create a game:</p>
+            <form id="create_form" method='post' action="{% url 'game:create' %}">
+                {% csrf_token %}
+                <input type="text" placeholder="Enter a game name here" id="create_game" name="game_name_create">
+                <button type="submit" id="create_submit">Submit</button>
+            </form>
+        </div>
+
+        <div>
+            <a href="{% url 'main:log_out' %}">Log out</a>
+        </div>
+
     </div>
 
 {% else %}
+    <div class='menu'>
+        <div>
+            <a href="{% url 'main:log_in' %}">Log in</a>
+        </div>
 
-    <div>
-        <a href="{% url 'main:log_in' %}">Log in</a>
+        <div>
+            <a href="{% url 'main:register' %}">Create an account</a>
+        </div>
+
+       <script>
+            document.getElement
+        </script>
     </div>
-
-    <div>
-        <a href="{% url 'main:register' %}">Create an account</a>
-    </div>
-
-    <script>
-        document.getElement
-    </script>
 
 {% endif %}
+
+{% endblock content %}
