--- a/poker_app/main/templates/main/logout.html
+++ b/poker_app/main/templates/main/logout.html
@@ -1,3 +1,9 @@
+{% extends 'main/base.html' %}
+
+{% block content %}
+
 <p>You have been logged out.</p>
 
 <a href="{% url 'main:index' %}">Home</a>
+
+{% endblock content %}
