--- a/poker_app/main/templates/main/login.html
+++ b/poker_app/main/templates/main/login.html
@@ -3,16 +3,16 @@
 {% block content %}
 
 {% if not_found %}
-<p>There is no user with that name. Try again.</p>
+<p class='text element'>There is no user with that name. Try again.</p>
 {% endif %}
 
-<form method="post" action="{% url 'main:log_in' %}">
+<form method="post" action="{% url 'main:log_in' %}" class='text element'>
     {% csrf_token %}
     {{ form.as_p }}
 
-    <button name="submit">Log in</button>
-    <input type="hidden" name="next" value="{% url 'main:index' %}" />
+    <button name="submit" class='text button element'>LOG IN</button>
+    <input type="hidden" name="next" value="{% url 'main:index' %}" class='text input'/>
 </form>
-<a href="{% url 'main:index' %}">Back</a>
+<a href="{% url 'main:index' %}" class='text button element'>BACK</a>
 
 {% endblock content %}
