--- a/poker_app/main/templates/main/register.html
+++ b/poker_app/main/templates/main/register.html
@@ -3,16 +3,16 @@
 {% block content %}
 
 {% if form.errors %}
-    <p>This username is already taken. Try again.</p>
+    <p class='text element'>This username is already taken. Try again.</p>
 {% endif %}
 
-<form method="post" action="{% url 'main:register' %}">
+<form method="post" action="{% url 'main:register' %}" class='element'>
     {% csrf_token %}
     {{form.as_p}}
-    <button name="submit">Register</button>
+    <button name="submit" class='text button element'>REGISTER</button>
     <input type="hidden" name="next" value="{% url 'main:index' %}">
 </form>
 
-<a href="{% url 'main:index' %}">Back</a>
+<a href="{% url 'main:index' %}" class='text button element'>BACK</a>
 
 {% endblock content %}
