--- a/poker_app/game_fe/src/css/BetSetter.css
+++ b/poker_app/game_fe/src/css/BetSetter.css
@@ -1,24 +1,63 @@
+.betsetterContainer {
+    vertical-align: center;
+    position: absolute;
+    height: 70%;
+    top: 15%;
+    width: 40%;
+    left: 30%;
+    
+}
+
 .betsetter {
     position: absolute;
-    top: 5%;
-    left: 30%;
-    height: 90%;
-    width: 200px;
-    border-radius: 5%;
+    width: 50%;
+    height: 100%;
+    border-radius: 10px;
+    background-color: blanchedalmond;
+    z-index: 5;
 }
 
 .betsetterArrow {
     width: 100%;
-    height: 25%
+    height: 25%;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .betsetterNum {
     width: 100%;
     height: 50%;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .betsetterCol {
     flex: 1;
+    font-size: 15px;
+}
+
+.betsetterButtons {
+    height: 100%;
+    width: 40%;
+    position: absolute;
+    left: 55%;
+    display: flex;
+    flex-direction: column;
+}
+
+.betsetterButton {
+    position: relative;
+    height: 30%;
+    width: 100%;
+    margin-top: 10%;
+    border-radius: 10px;
+    background-color: blanchedalmond;
+    text-align: center;
+}
+
+.betsetterClick:hover {
+    background-color: #f5cb8c;
+    cursor: pointer;
 }
