--- a/poker_app/game_fe/src/css/Me.css
+++ b/poker_app/game_fe/src/css/Me.css
@@ -10,26 +10,114 @@
 }
 
 .meContainer {
-    height: 25%;
-    width: 80%;
+    height: 30%;
+    width: 100%;
     position: absolute;
-    top: 50%;
-    left: 10%;
+    top: 52%;
+}
+
+.myChips {
+    font-size: 20px;
+    font-weight: bold;
+    color: yellow;
+    position: absolute;
+    top: 10vh;
+    height: 10%;
+    width: 12vh;
+    left: 20%;
+}
+
+.myChipsImage {
+    position: absolute;
+    height: 12vh;
+    top: 30%;
+    width: 12vh;
+    left: 20%;
 }
 
 .myCard {
-    height: '20vw';
-    width: '14vw';
+    height: 15vh;
+    width: 10.5vh;
+    display: inline-block;
+    position: relative;
+    top: 2vh;
 }
 
-.meTable {
-    position: 'absolute';
-    top: 10%;
-    height: 90%;
+.myBetContainer {
+    position: absolute;
+    top: 5%;
+    height: 20%;
     width: 100%;
 }
 
+.myDealer {
+    position: absolute;
+    left: 12%;
+    top: 1000%;
+    height: 30px;
+    width: 30px;
+}
+
+.dealerChip {
+    position: absolute;
+    background-color: white;
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+}
+
+.myBet {
+    position: absolute;
+    height: 8vh;
+    width: 8vh;
+    left: 50%;
+    margin-left: -4vh;
+
+}
+
+.myBetNumber {
+    position: absolute;
+    text-align: center;
+    left: 50%;
+    top: 25%;
+    margin-left: -4vh;
+    height: 100%;
+    width: 100%;
+    color: yellow;
+}
+
+.myBetImage {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.meTable {
+    position: absolute;
+    top: 30%;
+    height: 60%;
+    width: 100%;
+}
+
+.meName {
+    position: absolute;
+    top: 90%;
+    height: 10%;
+    width: 100%;
+    font-size: 20px;
+}
+
 .meTableCell {
+    position: absolute;
+    top: 0%;
+    height: 100%;
     width: 50%;
-    position: 'absolute';
+}
+
+.left {
+    left: 0%;
+}
+
+.right {
+    left: 50%;
 }
